--- a/index.html
+++ b/index.html
@@ -531,6 +531,16 @@
 
         gtag('config', 'G-LQ1DX0KV4V');
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ1DX0KV4V"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-LQ1DX0KV4V');
+    </script>
 </body>
 
 </html>
