add google site verification

--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarMenu">
                 <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
-                    <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal"
+                    <!-- <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal"
                             data-bs-target="#modalMenonton">Cara Menonton</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal"
-                            data-bs-target="#modalSubtitle">Cara Ubah Subtitle</a></li>
+                            data-bs-target="#modalSubtitle">Cara Ubah Subtitle</a></li> -->
                     <li class="nav-item d-flex align-items-center ms-3">
                         <div class="form-check form-switch text-white">
                             <input class="form-check-input" type="checkbox" id="themeSwitch">
