--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="movie box office, film populer, film terbaru, nonton film online">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
+    <meta name="google-site-verification" content="X9U404o5j8AKMeofEWSHoxTpa9fT-byiRO9UNl8RGJw" />
 
     <!-- Bootstrap CSS & Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
