--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ1DX0KV4V"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ1DX0KV4V"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-LQ1DX0KV4V');
-    </script>
+    </script> -->
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
