--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LQ1DX0KV4V"></script>
-    <script>
+    <!-- <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-LQ1DX0KV4V');
+    </script> -->
+
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'GTM-MSNQHPCF');
     </script>
+
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
